--- a/ConversorTemp/index.html
+++ b/ConversorTemp/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="estilo.css">
     <title>Conversor de Temperatura</title>
 </head>
 <body>
@@ -12,7 +13,7 @@
     </header>
         <section>
             <div>
-
+               
             </div>
             <div>
 
@@ -21,5 +22,6 @@
     <footer>
         <p>&copy; Guilherme Leonardo</p>
     </footer>
+    <script src="script.js"></script>
 </body>
 </html>
