--- a/ConversorTemp/index.html
+++ b/ConversorTemp/index.html
@@ -13,10 +13,12 @@
     </header>
         <section>
             <div>
-               
+               <p>Valor Inicial</p><input type="number" name="temp1" id="temp1">
+               -> <input type="number" name="temp2" id="temp2"> 
+               <input type="button" value="Transformar">
             </div>
             <div>
-
+                Informe um Valor
             </div>
         </section>
     <footer>
